# algo-trading-bootcamp

./: .gitignore  pyproject.toml
02-Think-Stats/Notebooks/: 01_Exploratory_Data_Analysis.ipynb  02_Distributions.ipynb  03_Probability_Mass_Functions.ipynb  03a_Probability_Mass_Functions_Revisited.ipynb  04_Cumulative_Distribution_Functions.ipynb  nsfg.py  thinkstats.py
04-Python-API-Wrappers/: cex_api_examples.md
XX-Agentic-Design/Anthropic/Anthropic-courses/01-Anthropic-API-fundamentals/: README.md
XX-Agentic-Design/Anthropic/Anthropic-courses/01-Anthropic-API-fundamentals/Notebooks/: 01_Getting_started_with_the_Claude_SDK.ipynb  02_Claude_Models.ipynb  03_Model_Parameters.ipynb  04_Streaming.ipynb  05_Prompting_With_Images.ipynb
XX-Agentic-Design/Anthropic/Anthropic-courses/02-Prompt-engineering-interactive-tutorial/: README.md
XX-Agentic-Design/Anthropic/Anthropic-courses/02-Prompt-engineering-interactive-tutorial/Notebooks/: 01_Prompting_Basics_Revisited.ipynb  02_Role_Prompting_and_Prompt_Templates.ipynb  03_Formatting_Output_and_Speaking_for_Claude.ipynb
XX-Agentic-Design/Computer-Use-With-Anthropic/Notebooks/: 01_Anthropic_API.ipynb  02_Multimodal_Requests_And_Streaming.ipynb  03_Real_World_Prompting.ipynb  04_Prompt_Caching.ipynb  05_Tool_Use.ipynb  06_Computer_Use_With_Anthropic.ipynb
YY-Probability/Probability-for-dummies/Notebooks/: ch02_Coming_to_Terms_with_Probability.ipynb  ch02a_Probabilities_of_Events.ipynb
