[tool.poetry]
name = "algo-trading-bootcamp"
version = "0.1.0"
description = ""
authors = ["mindeleven <mindeleven@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
statadict = "^1.1.0"
pandas = "^2.2.3"
numpy = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
