[tool.poetry]
name = "algo-trading-bootcamp"
version = "0.1.0"
description = ""
authors = ["mindeleven <mindeleven@posteo.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
statadict = "^1.1.0"
pandas = "^2.2.3"
numpy = "^2.2.1"
empiricaldist = "^0.8.0"
statsmodels = "^0.14.4"
yfinance = "^0.2.52"
anthropic = "^0.45.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
